ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration2/input.ts.stderr
error[1183]: An implementation cannot be declared in ambient contexts
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration2/input.ts:1:24
  |
1 | declare function Foo() {
  |                        ^

